# app/Http/Requests/StoreEmployeeRequest.php
@@ -14,7 +14,9 @@ use OpenApi\Attributes as OA;
         new OA\Property(property: "email", type: "string", format: "email", maxLength: 255),
         new OA\Property(property: "phone_number", type: "string", maxLength: 20),
         new OA\Property(property: "address", type: "object", description: "A valid address object"),
-        new OA\Property(property: "company_ids", type: "array", description: "A valid company IDs array"),
+        new OA\Property(property: "company_ids", type: "array", description: "A valid company IDs array", 
+            items: new OA\Items(type: "integer", format: "int64")
+        ),
     ]
 )]
 class StoreEmployeeRequest extends EmployeeRequest
